src/test/resources/semantic/error/TC_ERROR_DOBLE_ATRIBUTO.ru
/? ERROR: SEMANTICO - DECLARACIONES
/? | NUMERO DE LINEA: | NUMERO DE COLUMNA: | DESCRIPCION: |
/? | LINEA 6 | COLUMNA 13 | El atributo 'a' se ha declarado más de una vez en la estructura 'A'. |
struct A{
    Int a;
    pri Int a;
}

start{

}